src/styles/pages/AboutPage.scss
@use '../variables/fonts' as fonts;
@use '../variables/colors' as colors;
@use '../_mixins.scss' as mixins;

@forward '../animations/blend-in-out.scss';
@forward '../animations/rotate-hue-rotate.scss';
@forward '../animations/text-hue-rotate.scss';

$font-family-bold: fonts.$font-family-bold;

$color1: colors.$color1;

.aboutPage {
  display: none;
  flex-direction: column;
  width: 90%;

  @include mixins.component-code-snippet('const About = () => {');

  user-select: none;

  &__about {
    &-title {
      font-family: $font-family-bold;
      font-size: 2.7rem;
      font-style: oblique;
      text-transform: capitalize;
      width: 50%;
      margin-bottom: 1rem;
      color: $color1;

      .emoji {
        font-style: normal;
      }
    }

    &-p {
      font-family: 'Jura', sans-serif;
      font-size: 1.1rem;
    }
  }

  &__images {
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;
    margin: 2rem 0;

    &.image-layer {
      position: absolute;
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%);
    }

    .figure {
      width: 70%;
    }

    .profile {
      position: absolute;
      filter: opacity(0.7);
      width: 45%;
    }
  }

  @media (min-width: 768px) {
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    height: 100vh;

    &__about {
      width: 60%;

      &-title {
        font-size: 3.5rem;
        width: 70%;
      }

      &-p {
        font-size: 1.3rem;
        width: 90%;
      }
    }

    &__images {
      display: flex;
      justify-content: center;
      align-items: center;
      width: 40%;

      .figure {
        width: 100%;
      }

      .profile {
        width: 55%;
      }
    }
  }
}

